force-app/main/default/objects/PDLM__Declaration__c/PDLM__Declaration__c.object-meta.xml
<CustomObject>
    <label>Declaration</label>
    <nameField>
        <displayFormat>DEC-{0000}</displayFormat>
        <label>Declaration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Declarations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>