force-app/main/default/objects/PDLM__Declaration__c/fields/PDLM__Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Approved_Date__c</fullName>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>