force-app/main/default/objects/PDLM__Declaration__c/fields/PDLM__Days_Late__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Days_Late__c</fullName>
    <formula>IF(PDLM__Is_Late__c, TODAY() - PDLM__Due_Date__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>