force-app/main/default/objects/PDLM__Declaration__c/fields/PDLM__Is_Late__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Is_Late__c</fullName>
    <formula>NOT(ISNULL(PDLM__Due_Date__c)) &amp;&amp; TODAY() &gt; PDLM__Due_Date__c &amp;&amp; PDLM__Closed__c = false &amp;&amp; PDLM__Cancelled__c = false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Late</label>
    <type>Checkbox</type>
</CustomField>