force-app/main/default/objects/PDLM__Declaration__c/fields/PDLM__Title__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>